# hsthrift

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  build.sh  cabal-github.project  cabal-meta.project  cabal.project  ci-sdist.cabal.project  ci.cabal.project  docker-enter.sh  install_deps.sh  new_install_deps.sh  run_tests.sh  structured_annotations.md
common/github/: TestRunner.hs  fb-stubs.cabal
common/github/Facebook/: Init.hs
common/mangle/: CHANGELOG.md  LICENSE  Main.hs  Mangle.hs  Test.hs  hsc.h  mangle.cabal
common/mangle/Mangle/: TH.hs
common/mangle/tests/: Test.hs
common/util/: CHANGELOG.md  fb-util.cabal  hsc.h
common/util/Compat/: Prettyprinter.hs
common/util/Control/: Trace.hs
common/util/Data/: MovingAverageRateLimiter.hs  RateLimiterMap.hs
common/util/Util/: ASan.hs  Aeson.hs  AllocLimit.hs  Applicative.hs  AsanAlloc.cpp  AsanAlloc.h  Async.hs  Bag.hs  Bits.hs  Buffer.hs  Build.hs  ByteString.hs  Concurrent.hs  Defer.hs  Directory.hs  Dll.hs  Encoding.hs  Err.hs  EventBase.hs  Executor.cpp  Executor.hs  FFI.hs  Fd.hs  FilePath.hs  Function.hs  GFlags.cpp  GFlags.hs  Graph.hs  HSE.hs  HUnit.hs  IO.hs  IOBuf.hsc  Lens.hs  Linter.hs  List.hs  Log.hs  LogIfSlow.hs  Logger.hs  MD5.hs  Memory.hs  (+20 more)
common/util/cpp/: Constructible.h  Destructible.h  EventBaseDataplane.cpp  Executor.cpp  HsOption.h  HsStdTuple.h  HsStdVariant.h  HsStruct.cpp  HsStruct.h  HsStructDefines.h  HsVariant.h  IOBuf.cpp  IOBuf.h  Marshallable.h  RequestContext.cpp  RequestContext.h  TARGETS  cdynamic.cpp  cdynamic.h  ffi.cpp  ffi.h  logging.cpp  logging.h  memory.h  wrap.h
common/util/tests/: AesonTest.hs  AllocLimitTest.hs  AsyncTest.hs  BinaryTest.hs  BufferTest.hs  ConcurrentTest.hs  ControlExceptionTest.hs  DynamicBench.hs  DynamicHelper.cpp  DynamicHelper.h  DynamicTest.hs  EncodingForeignTest.cpp  EncodingLib.hs  EncodingTest.hs  ExceptionTest.hs  FilePathTest.hs  GFlagsTest.cpp  GFlagsTest.hs  GraphTest.hs  HsStructHelper.cpp  HsStructHelper.h  HsStructTest.hs  HsStructTestTypes.hsc  IOBufTest.cpp  IOBufTest.hs  IOTest.hs  JSONPrettyTest.hs  LensTest.hs  ListTest.hs  LogTest.hs  MD5Test.hs  Main.hs  MovingAverageRateLimiterTest.hs  OptParseTest.hs  RWVarTest.hs  RateLimiterMapTest.hs  RegexTest.hs  RequestContextTest.hs  RequestContextTestHelper.hs  SpecRunner.hs  (+9 more)
compiler/: CHANGELOG.md  Main.hs  Setup.hs  thrift-compiler.cabal
compiler/Thrift/: Compiler.hs
compiler/Thrift/Compiler/: GenClient.hs  GenConst.hs  GenEnum.hs  GenFunction.hs  GenHaskell.hs  GenJSON.hs  GenJSONLoc.hs  GenService.hs  GenStruct.hs  GenTypedef.hs  GenUnion.hs  GenUtils.hs  Lexer.x  OptParse.hs  Options.hs  Parser.y  Plugin.hs  Pretty.hs  Typechecker.hs  Types.hs
compiler/main/: Main.hs
compiler/test/: DummyBinaryForBuild.hs  InstallFixtures.hs  Main.hs  SecurityTest.hs  TestFixtures.hs  Util.hs  genjsonloc-contains.sh
compiler/test/github/: Util.hs
compiler/test/if/: a.thrift  b.thrift  bidi.thrift  c.thrift  d.thrift  e.thrift  f.thrift  g.thrift  h.thrift
cpp-channel/: cpp-channel.cabal  thrift-cpp-channel.cabal
cpp-channel/Thrift/Channel/: CppChannel.hsc  HeaderChannel.hs
cpp-channel/cpp/: HeaderChannel.cpp  HsChannel.cpp  HsChannel.h
cpp-channel/test/: CompactBench.cpp  CompactBench.hs  HeaderChannelTest.hs  LifetimeTest.hs  MathServer.cpp
haxl/: CHANGELOG.md  thrift-haxl.cabal
haxl/Haxl/DataSource/: Thrift.hs
http/: CHANGELOG.md  thrift-http.cabal
http/Thrift/Channel/: HTTP.hs
http/Thrift/Server/: HTTP.hs  Http.hs
http/test/: ServerTest.hs
http/test/common/: CalculatorHandler.hs  EchoHandler.hs
lib/: CHANGELOG.md  thrift  thrift-lib.cabal
lib/Thrift/: Api.hs  Channel.hs  Codegen.hs  CodegenTypesOnly.hs  HasFields.hs  Monad.hsc  Processor.hs  Protocol.hs  Util.hs
lib/Thrift/Binary/: Parser.hs
lib/Thrift/Channel/: CppChannel.hsc  HeaderChannel.hs  SocketChannel.hs
lib/Thrift/Protocol/: Binary.hs  Compact.hs  Id.hs  JSON.hs
lib/cpp/: HeaderChannel.cpp  HsChannel.cpp  HsChannel.h
lib/if/: ApplicationException.thrift  RpcOptions.thrift
lib/test/: BinaryParserTest.hs  ChannelTest.hs  ClientTest.hs  CompactBench.cpp  CompactBench.hs  HeaderChannelTest.hs  IOBufBench.cpp  IOBufBench.hs  JSONNullTest.hs  JSONNumTest.hs  JSONStringTest.hs  Main.hs  Network.hs  ServerChannel.hs  SocketChannelTest.hs  SocketServer.hs  TestChannel.hs  TestCommon.hs
lib/test/cpp/: MathServer.cpp
lib/test/helpers/: Network.hs  TestChannel.hs
server/: CHANGELOG.md  thrift-server.cabal
server/cpp/: CppServer.cpp  CppServer.h  HaskellProcessor.cpp  HaskellProcessor.h
server/test/: CalculatorHandler.hs  DanglingPointerTest.hs  EchoHandler.hs  HandlerTest.hs  HaskellProcessorTest.cpp  Main.hs  ServerTest.hs  TestRunner.hs
tests/: AddPrefixTest.hs  BinaryProtocolTest.hs  ConstGenTest.hs  ConstParserTest.hs  ConstTest.hs  DuplicateNamesTest.hs  EnumConstTest.hs  EnumTest.hs  ExceptionTest.hs  FlagsTest.hs  HasFieldTest.hs  IncludesTest.hs  InputCheckingTest.hs  InstancesTest.hs  IntegrationTest.hs  InteractionsTest.hs  InterfaceTest.hs  JSONTest.hs  LexerTest.hs  MapTest.hs  MessageTest.hs  MessedUpCaseTest.hs  NamespaceTest.hs  ParensTest.hs  ParserTest.hs  PseudoThriftEnumTest.hs  RecursiveTest.hs  RequiredSymbolsTest.hs  ScopedEnumsTest.hs  ServiceTest.hs  TransitiveIncludeTest.hs  TypecheckerTest.hs  TypecheckerTestLenient.hs  thrift-tests.cabal
tests/cpp/: hs_test.cpp  hs_test.h  messages.cpp  messages.h
tests/if/: A.thrift  B.thrift  C.thrift  D.thrift  E.thrift  EnumConst.thrift  bar.thrift  baz.thrift  constants.thrift  duplicate.thrift  enum.thrift  enum_dependee.thrift  exception.thrift  flags.thrift  foo.thrift  hasfield.thrift  hs_prefix.thrift  hs_test.thrift  hs_test_instances.hs  huge.hs  huge.thrift  instances.hs  map.thrift  messed_up_case.thrift  monoid.thrift  namespace.thrift  namespace_included.thrift  no_structs.thrift  package.thrift  parens.thrift  pseudoenum.thrift  scoped_enums.thrift  service.thrift  typedef_annotation.thrift  typedef_struct_const.thrift  versions.thrift
util/: thrift-util.cabal
util/Util/: Thrift.hs
(+365 files in other folders)
