cabal-version:       3.6

name:                thrift-haxl
version:             0.1.0.0
synopsis:            Support for using Haxl with Thrift services
bug-reports:         https://github.com/facebookincubator/hsthrift/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Facebook, Inc.
maintainer:          hsthrift-team@fb.com
copyright:           (c) Facebook, All Rights Reserved
category:            Thrift
build-type:          Simple
extra-source-files:  CHANGELOG.md

common fb-haskell
    default-language: Haskell2010
    default-extensions:
        BangPatterns
        BinaryLiterals
        DataKinds
        DeriveDataTypeable
        DeriveGeneric
        EmptyCase
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        GADTs
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NoMonomorphismRestriction
        OverloadedStrings
        PatternSynonyms
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilies
        TypeSynonymInstances
        NondecreasingIndentation

library
    import: fb-haskell
    exposed-modules:
        Haxl.DataSource.Thrift
    build-depends:
        thrift-lib,
        hashable ^>=1.2.7.0,
        haxl ^>= 2.1.0.0,
        mtl ^>=2.2.2,
        text-show,
        text ^>=1.2.3.0,
        transformers ^>=0.5.5.0,
        unordered-containers ^>=0.2.9.0,
        base ^>=4.11.1.0
