cabal-version:       3.6

-- Copyright (c) Facebook, Inc. and its affiliates.

name:                thrift-http
version:             0.1.0.0
synopsis:            Support for Thrift-over-HTTP server and client
homepage:            https://github.com/facebookincubator/hsthrift
bug-reports:         https://github.com/facebookincubator/hsthrift/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Facebook, Inc.
maintainer:          hsthrift-team@fb.com
copyright:           (c) Facebook, All Rights Reserved
category:            Thrift

description:
    Support for building servers and clients that communicate
    using Thrift over an HTTP transport. Uses WAI and Warp as
    the server-side HTTP implementation, and http-client for
    the client-side implementation.
    .
    NOTE: for build instructions and documentation, see
    https://github.com/facebookincubator/hsthrift

source-repository head
    type: git
    location: https://github.com/facebookincubator/hsthrift.git

common fb-haskell
    default-language: Haskell2010
    default-extensions:
        BangPatterns
        BinaryLiterals
        DataKinds
        DeriveDataTypeable
        DeriveGeneric
        EmptyCase
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        GADTs
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NoMonomorphismRestriction
        OverloadedStrings
        PatternSynonyms
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilies
        TypeSynonymInstances
        NondecreasingIndentation
  if flag(opt)
     ghc-options: -O2

flag opt
     default: False

library
  import: fb-haskell
  exposed-modules:
      Thrift.Server.HTTP
      Thrift.Channel.HTTP

  build-depends:
      fb-util,
      thrift-lib,
      base >=4.11.1 && <4.17,
      text ^>=1.2.3.0,
      bytestring >=0.10.8.2 && <0.12,
      async ^>=2.2.1,
      utf8-string,
      containers,
      wai,
      warp,
      streaming-commons,
      network,
      http-client,
      http-types

  default-language:    Haskell2010

-- Workaround for IPv6 loopback bug on Docker/Ubuntu:
--   https://github.com/docker/for-linux/issues/1374
flag tests_use_ipv4
     description: Force tests to use IPV4 whenever bringing thrift clients/servers up
     default: False
     manual: True

common test-deps
  build-depends: aeson,
                 base,
                 bytestring,
                 data-default,
                 deepseq,
                 fb-stubs,
                 fb-util,
                 hashable,
                 hspec,
                 hspec-contrib,
                 ghc-prim,
                 HUnit ^>= 1.6.1,
                 STMonadTrans,
                 text,
                 thrift-lib,
                 thrift-lib:test-helpers,
                 transformers,
                 unordered-containers
  if flag(tests_use_ipv4)
    -- for test/Network.hs
    cpp-options: -DIPV4

library test-lib
  import: fb-haskell, test-deps
  hs-source-dirs: test/common, test/gen-hs2
  exposed-modules:
        CalculatorHandler
        EchoHandler
        Echoer.Echoer.Client
        Echoer.Echoer.Service
        Echoer.Types
        Math.Adder.Client
        Math.Adder.Service
        Math.Calculator.Client
        Math.Calculator.Service
        Math.Types
  build-depends:
        containers

common test-common
  import: test-deps
  hs-source-dirs: test
  build-depends: thrift-http:test-lib, thrift-http
  ghc-options: -threaded

test-suite server
  import: fb-haskell, test-common
  type: exitcode-stdio-1.0
  main-is: ServerTest.hs
  ghc-options: -main-is ServerTest
